--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 		"issues": "https://github.com/kdyby/console/issues"
 	},
 	"require": {
-		"php": ">=7.1 || ^8.0",
+		"php": "^7.4 || ^8.0",
 		"nette/di": "^2.4.10 || ^3.0",
 		"nette/routing": "^3.0.0",
 		"tracy/tracy": "^2.5 || ^3.0",
